# rs_emu_lib

./: .gitignore  .gitmodules  Cargo.toml  README.md
emu_cli/: Cargo.toml
emu_cli/src/: main.rs  memdsp.rs
emu_cli/src/memdsp/: fbdisplay.rs  fbzxdisplay.rs  mod.rs
py_emu_lib/: Cargo.toml  pyproject.toml
py_emu_lib/script/: main.py
py_emu_lib/src/: lib.rs
py_emu_lib/src/cpu/: mod.rs
py_emu_lib/src/memory/: memdevice.rs  mod.rs
scripts/: newins  newins.py
scripts/data/: z80_instruction.rs.template
src/: emulator.rs  lib.rs  main.rs
src/cpu/: instruction.rs  mod.rs  registers.rs  test.rs
src/cpu/i8080/: mod.rs  parser.rs
src/cpu/z80/: mod.rs  parser.rs  test.rs
src/cpu/z80/instructions/: ccf.rs  cpl.rs  daa.rs  di.rs  djnz_d.rs  ei.rs  exx.rs  halt.rs  im0.rs  im1.rs  im2.rs  lddr.rs  ldi.rs  ldir.rs  mod.rs  neg.rs  nop.rs  ret.rs  retn.rs  rla.rs  rlca.rs  rra.rs  rrca.rs  scf.rs
src/cpu/z80/instructions/bit/: mod.rs
src/cpu/z80/instructions/call/: call_c_nn.rs  call_m_nn.rs  call_nc_nn.rs  call_nn.rs  call_nz_nn.rs  call_p_nn.rs  call_pe_nn.rs  call_po_nn.rs  call_z_nn.rs  mod.rs
src/cpu/z80/instructions/ex/: ex_af_saf.rs  (+5 more)
src/emu_lib/: emulator.rs  mod.rs  utils.rs
src/emu_lib/cpu/: instruction.rs  mod.rs  registers.rs  test.rs
src/emu_lib/cpu/i8080/: mod.rs
src/emu_lib/cpu/z80/: decoder.rs  encoder.rs  mod.rs  parser.rs  registers.rs  test.rs
src/emu_lib/io/: iodevice.rs  mod.rs
src/emu_lib/memory/: errors.rs  memdevice.rs  memdevices.rs  mod.rs
src/io/: iodevice.rs  mod.rs
src/memory/: errors.rs  memdevices.rs  mod.rs
(+435 files in other folders)
