[package]
name = "emu_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "emu_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
bitfield-struct = "0.8.0"
regex = "1.10.3"
thiserror = "1.0.58"
paste = "1.0.14"
hex-literal = "0.4.1"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
bincode = { version="1.3.3" }

[dev-dependencies]
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"